Updated guide for props

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Aug 10 2021 20:53:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Aug 11 2021 06:12:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61118daf74e80c32989cf418" data-wf-site="61118dae74e80cadba9cf414">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div class="w-container"><img src="images/hb4vtyrpp6j21.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/hb4vtyrpp6j21.jpg 500w, images/hb4vtyrpp6j21.jpg 800w, images/hb4vtyrpp6j21.jpg 1600w, images/hb4vtyrpp6j21.jpg 1920w" alt="" class="image-2">
+  <div class="w-container"><img src="images/hb4vtyrpp6j21.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/hb4vtyrpp6j21-p-500.jpeg 500w, images/hb4vtyrpp6j21-p-800.jpeg 800w, images/hb4vtyrpp6j21-p-1600.jpeg 1600w, images/hb4vtyrpp6j21.jpg 1920w" alt="" class="image-2">
     <div>
       <h1 class="heading"><br><br><br><br><br><br>          <br>       Welcome to Industrial Chaos...</h1>
     </div>
@@ -38,13 +38,14 @@
           <div><img src="images/e5fa0e07ae16e8051972826fd94878b2.jpg" loading="lazy" alt=""></div>
           <figcaption>The main menu</figcaption>
         </figure>
-        <p>You might also notice something on the HUD. Your character has a &#x27;PVP Value&#x27; and there is some text on the bottom right corner. Players cannot just be killed if they are poor. This is to prevent powerful players from bullying new players or player trying to rebuild. Your PVP Value is simply the sum of the value of all of your items and money. If it exceeds $10,000, then your character can be killed away from the safebox!</p>
+        <p>You might also notice something on the HUD. Your character has a &#x27;PVP Value&#x27; and there is some text on the bottom right corner. Players cannot just be killed if they are poor. This is to prevent powerful players from bullying new players or player trying to rebuild. Your PVP Value is simply the sum of the value of all of your items and money. If it exceeds $10,000, then your character can be killed away from the safebox! Be aware that you are not invincible to do whatever. You can become vulnerable for any of the following reasons: you picked up an item, you used a weapon, you have your physgun or tool gun out or you have PVP time.</p>
         <figure class="w-richtext-align-center w-richtext-figure-type-image">
           <div><img src="images/7eb94f043bf532f69e80866e1898d7c2.png" loading="lazy" alt=""></div>
           <figcaption>Picture of the HUD components mentioned above.</figcaption>
         </figure>
-        <p>Be aware that you are not invincible to do whatever. You can become vulnerable for any of the following reasons: you picked up an item, you used a weapon, you have your physgun or tool gun out or you have PVP time.</p>
         <p>‍</p>
+        <p>Another thing to know is that ALL props are destroyable. And all doors can be shot open using a gun. This means there is no such thing as prop block. You can shoot props with a gun to destroy them or buy an abrasive saw/chainsaw to destroy them quicker.</p>
+        <div class="w-embed"><img src="https://i.gyazo.com/5634c277eeb2bcdbf01e5d63c0e21822.gif" width="350" height="350" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"></div>
       </div>
     </div>
     <div class="wf-section">
