--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Aug 11 2021 06:12:47 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Aug 11 2021 06:24:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61118daf74e80c32989cf418" data-wf-site="61118dae74e80cadba9cf414">
 <head>
   <meta charset="utf-8">
@@ -45,7 +45,10 @@
         </figure>
         <p>‍</p>
         <p>Another thing to know is that ALL props are destroyable. And all doors can be shot open using a gun. This means there is no such thing as prop block. You can shoot props with a gun to destroy them or buy an abrasive saw/chainsaw to destroy them quicker.</p>
-        <div class="w-embed"><img src="https://i.gyazo.com/5634c277eeb2bcdbf01e5d63c0e21822.gif" width="350" height="350" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"></div>
+        <figure class="w-richtext-align-center w-richtext-figure-type-image">
+          <div><img src="images/15fa4e000f686d0e95f089c6d56f2dfa.gif" loading="lazy" alt=""></div>
+          <figcaption>A player destroying a prop with an abrasive saw</figcaption>
+        </figure>
       </div>
     </div>
     <div class="wf-section">
