--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Sole Survivor', monospace, sans-serif;
+            font-family: 'Orbitron', Arial, sans-serif;
             background: #000;
             color: #00ff00;
             min-height: 100vh;
